# GladiusSlicer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
docs/: algorithm.md
gladius_shared/: Cargo.toml
gladius_shared/gladius_proc_macros/: Cargo.toml
gladius_shared/gladius_proc_macros/src/: settings.rs
gladius_shared/src/: error.rs  settings.rs  types.rs
gladius_shared/src/loader/: threemf.rs
settings/: BBL_x1c.json  schema.json
src/: cli.yaml  converter.rs  input.rs  main.rs  optimizer.rs  slice_pass.rs  slicing.rs  test.rs  tower.rs  utils.rs
src/plotter/: lightning_infill.rs  mod.rs  monotone.rs
