[package]
name = "gladius_shared"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
json_schema_gen = ["dep:schemars"]

[dependencies]
zip = { version = "2.2.0", features = ["bzip2", "deflate", "deflate64", "lzma", "time", "xz", "zstd"], default-features = false }

nom_stl = "0.2.2"
serde = { version = "1.0", features = ["derive"] }

serde-xml-rs = { version = "0.6", git = "https://github.com/TimTheBig/serde-xml-rs.git", package = "serde-xml-rust"}
geo = {version = "0.29", features = ["use-serde"]}
nalgebra = "0.33"
deser-hjson = "2.2"
serde_json = "^1.0.85"
itertools = "0.13"
gladius_proc_macros = { path = "./gladius_proc_macros" }

geo-validity-check = { version = "0.1.1", git = "https://github.com/TimTheBig/geo-validity-check.git" }
log = "0.4.22"

# json schema gen
[dependencies.schemars]
version = "1.0.0-alpha.17"
git = "https://github.com/TimTheBig/schemars.git"
branch = "geo0.29"
features = ["geo029"]
optional = true
